# aptos-tracking

./: .gitignore  Cargo.toml  db.sql  query.graphql  schema.graphql
src/: block.rs  bot.rs  callback.rs  db.rs  db_update_loop.rs  error.rs  health_check_loop.rs  main.rs  process_new_block.rs  process_new_tx.rs  query.rs  tx.rs
src/entities/: mod.rs  prelude.rs  processed_block.rs  sea_orm_active_enums.rs  token_info.rs  user.rs  wallet_tracked.rs
